[metadata]
name = yolo-benchmark
version = attr: yolo_benchmark.__version__
author = Anthony Monthe
author-email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/yolo-benchmark
project_urls = 
summary = Handy tool for evaluate yolo models performance
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = MIT

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Benchmark

keywords = benchmark, machine learning, deep learning


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =

test_suite = yolo_benchmark.tests
tests_require =

[options.extras_require]


[options.entry_points]
console_scripts =
    yolo-benchmark = yolo_benchmark.main:main


[coverage:run]
omit = yolo_benchmark/tests/*
branch = True
source = yolo_benchmark

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
